# HTS_Core_Firmware1

./: .audit_log.md  .cursorrules  .gitignore  HTS_LIM.slnx  HTS_검수_기준서.md  HTS_전수검사_2차패스_보고서_v5_auto.md  HTS_전수검사_로그_v5_auto.csv  HTS_전수검사_최종보고서_v5_auto.md  _pass2_auto.ps1
HTS_LIM/: # HTS B-CDMA 전수검사 통합 기준서.md  .audit_log.md  AnchorDecoder.cpp  AnchorDecoder.h  AnchorEncoder.cpp  AnchorEncoder.h  AnchorManager.cpp  AnchorManager.h  BB1_Core_Engine.cpp  CMakeLists.txt  CMakePresets.json  HTS64_Native_ECCM_Core.cpp  HTS64_Native_ECCM_Core.hpp  HTS64_Tx_Stealth.cpp  HTS64_Tx_Stealth.hpp  HTS_3D_Tensor_FEC.cpp  HTS_3D_Tensor_FEC.h  HTS_AEAD_Integrity.hpp  HTS_AES_Bridge.cpp  HTS_AES_Bridge.h  HTS_AMI_Protocol.cpp  HTS_AMI_Protocol.h  HTS_AMI_Protocol_Defs.h  HTS_API.cpp  HTS_API.h  HTS_ARIA_Bridge.cpp  HTS_ARIA_Bridge.h  HTS_ARIA_Bridge.hpp  HTS_Adaptive_BPS_Controller.cpp  HTS_Adaptive_BPS_Controller.h  HTS_Anchor_Vault.cpp  HTS_AntiAnalysis_Shield.cpp  HTS_AntiJam_Engine.cpp  HTS_AntiJam_Engine.h  HTS_Anti_Debug.cpp  HTS_Anti_Debug.h  HTS_Anti_Glitch.cpp  HTS_Anti_Glitch.h  HTS_Antipodal_Core.cpp  HTS_Arm_Irq_Mask_Guard.h  (+231 more)
HTS_LIM/arm_firmware/: CMakeLists.txt
HTS_LIM/cmake/: HTS_EmbeddedCommon.cmake  arm-none-eabi-toolchain.cmake
HTS_LIM/cmake/linker/: STM32F407VG_FLASH.ld
HTS_LIM/cmake/startup/: minimal_cortex_m4f.S
HTS_LIM/cmake/stubs/: no_heap_wrap.c  toolchain_smoke_main.cpp
HTS_LIM/host_aarch64/: HTS_IPC_Protocol_A55.cpp  HTS_Storage_Interface.cpp
HTS_TEST/: AJC TEST.cpp  AMI 종합 TEST.cpp  HTS_AJ_Main.cpp  HTS_AJ_Prng.h  HTS_AJ_Stats.cpp  HTS_AJ_Stats.h  HTS_AJ_Summary.cpp  HTS_AJ_Summary.h  HTS_AJ_TestEnv.h  HTS_AJ_TestMatrix.h  HTS_AJ_TestReport.cpp  HTS_AJ_TestReport.h  HTS_AJ_TestRunner.cpp  HTS_AJ_TestRunner.h  HTS_AMI_CommSpec_Barrage30_Matrix_Test.cpp  HTS_AMI_Realistic_Integration_Test.cpp  HTS_ARIA_KCMVP_KAT.cpp  HTS_Adaptive_BPS_Test.cpp  HTS_FEC_HARQ.cpp  HTS_FEC_HARQ.hpp  HTS_FEC_Layer_Test.cpp  HTS_HMAC_Bridge_Test.cpp  HTS_HMAC_KCMVP_KAT.cpp  HTS_LEA_KCMVP_KAT.cpp  HTS_LSH256_KCMVP_KAT.cpp  HTS_Preamble_Sync.h  HTS_Sensitivity_Test.cpp  HTS_TEST.vcxproj  HTS_TEST.vcxproj.filters  HTS_TPE_Bitwise_Controller.h  HTS_TPE_Bitwise_Simulation_main.cpp  HTS_V400_Dispatcher.cpp  HTS_V400_Dispatcher.hpp  HTS_검증_AMI_Barrage30_Spec.vcxproj  HTS_검증_AntiJam.vcxproj  HTS_검증_TPE_Bitwise.vcxproj  HTS_검증_종합재밍.vcxproj  재밍 이엠피테스트_16칩.cpp  재밍테스트 노드2048 16칩 64칩.cpp  재임 이엠피 테스트_16칩 종합.cpp  (+1 more)
POLAR_TEST/: POLAR_TEST.cpp  POLAR_TEST.vcxproj  POLAR_TEST.vcxproj.filters
build-m4/: .ninja_deps  .ninja_log
tools/: trng_analyze.py
verify_ami_avalanche_storm/: AA_Main.cpp  Verify_AMI_Avalanche_Storm.vcxproj
verify_apocalypse_all/: Apocalypse_All_Main.cpp  Verify_Apocalypse_All.vcxproj
verify_apt_annihilation/: APT_Main.cpp  Verify_APT_Annihilation.vcxproj
verify_asymmetric_rf/: ARf_Main.cpp  Verify_Asymmetric_RF.vcxproj
verify_black_swan_annihilation/: BlackSwan_Main.cpp  Verify_BlackSwan_Annihilation.vcxproj
verify_concurrency_stress/: CS_Main.cpp  Verify_Concurrency_Stress.vcxproj
verify_cosmic_seu_cfi/: Cosmic_Main.cpp  Verify_Cosmic_SEU_CFI.vcxproj
verify_dos_storm/: DS_Main.cpp  Verify_DoS_Storm.vcxproj
verify_e2e_scenario/: E2E_Main.cpp  Verify_E2E_Scenario.vcxproj
verify_fault_injection/: FI_Main.cpp  Verify_Fault_Injection.vcxproj
verify_flash_avalanche/: FA_Main.cpp  Verify_Flash_Avalanche.vcxproj
verify_fpu_poisoning/: FPU_Main.cpp  Verify_FPU_Poisoning.vcxproj
verify_grayfailure_race/: GrayFailure_Race_Main.cpp  Verify_GrayFailure_Race.vcxproj
verify_heisenbug_metastable/: Heisenbug_Main.cpp  Verify_Heisenbug_Metastable.vcxproj
verify_kt_dsn_disaster/: DSN_Main.cpp  Verify_KT_DSN_Disaster.vcxproj
verify_target_crosscompile/: CMakeLists.txt  Makefile  Verify_Target_CrossCompile.ps1  arm-none-eabi-gcc.cmake  cross_smoke.c  crt0.c  stm32f4_verify.ld
(+30 files in other folders)
